kubernetes/company-namspace/company-namespace.yaml
kind: Namespace  
apiVersion: v1  
metadata:  
 name: company  
 labels:  
   name: company
