kubernetes/company-namspace/backend-service-company.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service-company
  namespace: company
spec:
  type: ClusterIP
  selector:
    app: backend-service-company
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
...
