kubernetes/company-namspace/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: company
spec:
  type: ClusterIP
  selector:
    app: cloud-project
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
...
