kubernetes/company-namspace/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-company
  namespace: company
spec:
  type: ClusterIP
  selector:
    app: cloud-project
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
...
